// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown List should render an ordered list 1`] = `
<ol
  class="rsg--list-0 rsg--ordered-1"
>
  <li
    class="rsg--li-2"
  >
    First
  </li>
  <li
    class="rsg--li-2"
  >
    Second
  </li>
</ol>
`;

exports[`Markdown List should render an unordered list 1`] = `
<ul
  class="rsg--list-0"
>
  <li
    class="rsg--li-2"
  >
    First
  </li>
  <li
    class="rsg--li-2"
  >
    Second
  </li>
</ul>
`;
